--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -1,3 +1,14 @@
+* {
+  &::selection {
+    color: $white;
+    background-color: $brandColor;
+  }
+  &::-moz-selection {
+    color: $white;
+    background-color: $brandColor;
+  }
+}
+
 body {
   min-width: 320px;
   font-family: $mainFont;
@@ -11,4 +22,42 @@ body {
   margin: 0 auto;
   display: flex;
   align-items: center;
+}
+
+.heading {
+  color: $black;
+  font-family: $mainFont;
+  font-size: 92px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%; /* 92px */
+  letter-spacing: -3.68px;
+  &__highlight {
+    color: $brandColor;
+  }
+}
+.text {
+  color: $black;
+  font-family: $mainFont;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 130%;
+  letter-spacing: -0.48px;
+}
+
+.subheading {
+  color: $black;
+  font-family: $mainFont;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 95%;
+  letter-spacing: -2.56px;
+  &_brand {
+    color: $brandColor;
+  }
+  &_white {
+    color: $white;
+  }
 }
