--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -522,3 +522,330 @@
     margin: 0 auto;
   }
 }
+
+.projects-section {
+  margin-top: 80px;
+  margin-bottom: 161px;
+  &__wrapper {
+    gap: 16px;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+
+  &__info {
+    max-width: 528px;
+    margin-top: 48px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: start;
+    gap: 40px;
+  }
+
+  &__heading {
+  }
+
+  &__tabs {
+    position: relative;
+    width: 100%;
+  }
+
+  &__tab {
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    gap: 40px;
+    visibility: hidden;
+    opacity: 0;
+    transition: $defTransitionTime;
+    &.active {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+
+  &__tab-text {
+    color: $black;
+    font-family: $mainFont;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%;
+    letter-spacing: -0.56px;
+  }
+
+  &__tab-subtext {
+    color: rgba(0, 0, 0, 0.6);
+    font-family: $mainFont;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%;
+    letter-spacing: -0.56px;
+  }
+
+  &__swiper {
+    width: 100%;
+    max-width: 666px;
+    border-radius: 16px;
+    padding-bottom: 29px;
+    overflow: hidden;
+    margin: 0;
+    .swiper-pagination-bullet {
+      width: 8px;
+      height: 8px;
+      background-color: rgba($color: $brandColor, $alpha: 0.4);
+      opacity: 1;
+      &-active {
+        background-color: $brandColor;
+      }
+    }
+    &-slide {
+      position: relative;
+      &::after {
+        content: '';
+        width: 350px;
+        height: 350px;
+        position: absolute;
+        right: 0;
+        top: 0;
+        background-image: url('../assets/img/slide-lines.svg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+        z-index: 11;
+      }
+    }
+    &-navigation {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 10;
+      padding: 0px 24px;
+    }
+    &-nav-btn {
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: $defTransitionTime;
+      &:hover {
+        transform: scale(1.1);
+      }
+      &:active {
+        transform: scale(0.95);
+      }
+    }
+    &-pagination {
+      width: 100%;
+    }
+  }
+
+  &__swiper-slide {
+    width: 100%;
+  }
+
+  &__swiper-slide-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.swiper-button-disabled {
+  opacity: 0.4;
+}
+
+.contacts-section {
+  &__wrapper {
+    justify-content: space-between;
+
+    gap: 16px;
+  }
+
+  &__info {
+    width: 100%;
+    max-width: 535px;
+  }
+
+  &__info-header {
+    width: 100%;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #ebebeb;
+  }
+
+  &__info-item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 16px;
+    &_large {
+      gap: 21px;
+    }
+  }
+
+  &__info-item-heading {
+    color: $brandColor;
+    font-family: $mainFont;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%;
+  }
+
+  &__info-address {
+    color: $black;
+    font-family: $mainFont;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%; /* 38.4px */
+    letter-spacing: -0.32px;
+  }
+
+  &__info-body {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 70px;
+    padding: 70px 0;
+    border-bottom: 1px solid #ebebeb;
+  }
+
+  &__info-item-link {
+    font-size: 18px;
+    transition: $defTransitionTime;
+    &:hover {
+      color: $brandColor;
+    }
+  }
+
+  &__info-text {
+    font-size: 18px;
+  }
+
+  &__info-text-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    gap: 4px;
+  }
+
+  &__socials {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+  }
+
+  &__info-footer {
+    width: 100%;
+    padding-top: 24px;
+  }
+
+  &__profile {
+    width: 100%;
+    max-width: 474px;
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
+
+  &__profile-avatar {
+    width: 96px;
+    height: 96px;
+    border-radius: 50%;
+    overflow: hidden;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  &__profile-body {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    gap: 8px;
+  }
+
+  &__profile-heading {
+    color: $brandColor;
+    font-family: $mainFont;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%;
+    letter-spacing: -0.48px;
+  }
+
+  &__profile-text-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    gap: 2px;
+  }
+
+  &__profile-text,
+  &__profile-link {
+    color: $black;
+    font-family: $mainFont;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%; /* 26px */
+    letter-spacing: -0.4px;
+  }
+
+  &__map {
+    width: 100%;
+    max-width: 666px;
+    border-radius: 24px;
+    overflow: hidden;
+  }
+}
+
+.footer {
+  width: 100%;
+  margin-top: 108px;
+  padding: 21px 0;
+  background: #f8f8f8;
+  &__wrapper {
+    gap: 16px;
+    justify-content: space-between;
+  }
+
+  &__text {
+    color: $gray;
+    font-variant-numeric: lining-nums proportional-nums;
+    font-family: $mainFont;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  &__copyrights {
+  }
+
+  &__policy-link {
+    transition: $defTransitionTime;
+    &:hover {
+      color: $brandColor;
+    }
+  }
+}
