desktop article page

--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -975,3 +975,137 @@
     }
   }
 }
+
+.article-section {
+  &__wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+  }
+
+  &__heading {
+    margin-bottom: 25px;
+    color: $black;
+    font-family: $mainFont;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 95%; /* 45.6px */
+    letter-spacing: -0.96px;
+  }
+
+  &__date {
+    margin-bottom: 56px;
+    color: rgba($color: $black, $alpha: 0.4);
+    font-family: $mainFont;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.36px;
+  }
+
+  &__img {
+    width: 100%;
+    height: 684px;
+    object-fit: contain;
+    object-position: center;
+  }
+
+  &__text-content {
+    max-width: 868px;
+    margin: 0 auto;
+    h2 {
+      margin-top: 72px;
+      margin-bottom: 40px;
+      color: $black;
+      font-family: $mainFont;
+      font-size: 40px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 95%; /* 38px */
+      letter-spacing: -0.8px;
+    }
+    p {
+      margin-bottom: 16px;
+      span,
+      a {
+        color: $brandColor;
+      }
+      a {
+        transition: $defTransitionTime;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+    p,
+    li {
+      color: $black;
+      font-family: $mainFont;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 130%; /* 26px */
+      letter-spacing: -0.4px;
+    }
+    ol {
+      margin-bottom: 32px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: start;
+      gap: 12px;
+      list-style-type: decimal;
+      list-style-position: outside;
+      margin-left: 15px;
+    }
+    img {
+      width: 100%;
+      margin-top: 72px;
+      margin-bottom: 96px;
+      // height: 269px;
+      object-fit: cover;
+      object-position: center;
+    }
+  }
+}
+
+.breadcrumbs {
+  width: 100%;
+  margin-bottom: 32px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 4px;
+  &__link {
+    position: relative;
+    color: $black;
+    font-family: $mainFont;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.36px;
+    &.active {
+      color: rgba($color: $black, $alpha: 0.4);
+    }
+    &:not(:last-child) {
+      padding-right: 20px;
+      &::after {
+        content: '';
+        width: 16px;
+        height: 16px;
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        background-image: url('../assets/icons/breadcrumb-icon.svg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+      }
+    }
+  }
+}
