--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -945,34 +945,9 @@
   }
 
   &__pagination {
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    gap: 4px;
   }
 
   &__pagination-link {
-    width: 32px;
-    height: 32px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: $black;
-    font-family: $mainFont;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: -0.32px;
-    border-radius: 50%;
-    transition: $defTransitionTime;
-    &:hover {
-      background-color: rgba($color: $brandColor, $alpha: 0.5);
-    }
-    &.active {
-      color: $white;
-      background-color: $brandColor;
-    }
   }
 }
 
@@ -1107,5 +1082,235 @@
         background-size: contain;
       }
     }
+  }
+}
+
+.pagination {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  &__link {
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: $black;
+    font-family: $mainFont;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.32px;
+    border-radius: 50%;
+    transition: $defTransitionTime;
+    &:hover {
+      background-color: rgba($color: $brandColor, $alpha: 0.5);
+    }
+    &.active {
+      color: $white;
+      background-color: $brandColor;
+    }
+  }
+}
+
+.catalog-section {
+  margin-bottom: 72px;
+  &__wrapper {
+    align-items: flex-start;
+    justify-content: start;
+    gap: 40px;
+  }
+
+  &__filters {
+    width: 100%;
+    max-width: 250px;
+    position: sticky;
+    left: 0;
+    top: 0;
+    padding-top: 32px;
+  }
+
+  &__filters-heading {
+    margin-bottom: 24px;
+    color: $black;
+    font-family: $mainFont;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.28px;
+    text-transform: uppercase;
+  }
+
+  &__filters-list {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    gap: 24px;
+  }
+
+  &__filter {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    &.active {
+      .catalog-section__filter-content {
+        margin-top: 16px;
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+  }
+
+  &__filter-header {
+    width: 100%;
+    color: $black;
+    font-family: $mainFont;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: -0.36px;
+    cursor: pointer;
+  }
+
+  &__filter-content {
+    display: flex;
+    max-height: 0px;
+    opacity: 0;
+    visibility: hidden;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 24px;
+    justify-content: start;
+    gap: 12px;
+    transition: $defTransitionTime;
+  }
+
+  &__filter-label {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 8px;
+    color: $black;
+    font-family: $mainFont;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.36px;
+    cursor: pointer;
+    &:hover {
+      color: $brandColor;
+    }
+    input:checked + div {
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+      background-image: url('../assets/icons/check-icon.svg');
+    }
+  }
+
+  &__filter-checkbox {
+    width: 16px;
+    height: 16px;
+    border-radius: 4px;
+    border: 1px solid $brandColor;
+  }
+
+  &__filter-reset-btn {
+    margin-top: 48px;
+    width: 100%;
+    padding: 13px;
+    text-align: center;
+    border-radius: 8px;
+    background: #ebebeb;
+    color: $black;
+    font-family: $mainFont;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.36px;
+    cursor: pointer;
+    transition: $defTransitionTime;
+    outline: 1px solid transparent;
+    &:hover {
+      background-color: $white;
+      outline: 1px solid #ebebeb;
+    }
+    &:active {
+      transform: scale(0.95);
+    }
+  }
+
+  &__body {
+    width: 100%;
+  }
+
+  &__list {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 8px;
+  }
+
+  &__list-item {
+    width: 100%;
+  }
+
+  &__list-item-wrapper {
+    width: 100%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 24px 32px;
+    border-radius: 24px;
+    border: 1px solid #ebebeb;
+    background: $white;
+    transition: $defTransitionTime;
+    &:hover {
+      border-color: $brandColor;
+    }
+  }
+
+  &__list-item-img-wrapper {
+    margin: auto;
+    width: 100%;
+    height: 210px;
+  }
+
+  &__list-item-img {
+    width: 100%;
+    object-fit: contain;
+    object-position: center;
+  }
+
+  &__list-item-heading {
+    color: $black;
+    display: -webkit-box;
+    font-family: $mainFont;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.36px;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  &__pagination {
+    margin-top: 40px;
+    margin-left: 296px;
   }
 }
