--- a/styles/index.css
+++ b/styles/index.css
@@ -1233,36 +1233,6 @@ body {
      object-position: center;
   transition: 0.43s;
 }
-.articles-section__pagination {
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  gap: 4px;
-}
-.articles-section__pagination-link {
-  width: 32px;
-  height: 32px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #111;
-  font-family: "Suisse Intl", sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  letter-spacing: -0.32px;
-  border-radius: 50%;
-  transition: 0.43s;
-}
-.articles-section__pagination-link:hover {
-  background-color: rgba(255, 119, 7, 0.5);
-}
-.articles-section__pagination-link.active {
-  color: #fff;
-  background-color: #ff7707;
-}
-
 .article-section__wrapper {
   flex-direction: column;
   align-items: flex-start;
@@ -1392,4 +1362,217 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+}
+
+.pagination {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+.pagination__link {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #111;
+  font-family: "Suisse Intl", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.32px;
+  border-radius: 50%;
+  transition: 0.43s;
+}
+.pagination__link:hover {
+  background-color: rgba(255, 119, 7, 0.5);
+}
+.pagination__link.active {
+  color: #fff;
+  background-color: #ff7707;
+}
+
+.catalog-section {
+  margin-bottom: 72px;
+}
+.catalog-section__wrapper {
+  align-items: flex-start;
+  justify-content: start;
+  gap: 40px;
+}
+.catalog-section__filters {
+  width: 100%;
+  max-width: 250px;
+  position: sticky;
+  left: 0;
+  top: 0;
+  padding-top: 32px;
+}
+.catalog-section__filters-heading {
+  margin-bottom: 24px;
+  color: #111;
+  font-family: "Suisse Intl", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.28px;
+  text-transform: uppercase;
+}
+.catalog-section__filters-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: start;
+  gap: 24px;
+}
+.catalog-section__filter {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: start;
+}
+.catalog-section__filter.active .catalog-section__filter-content {
+  margin-top: 16px;
+  opacity: 1;
+  visibility: visible;
+}
+.catalog-section__filter-header {
+  width: 100%;
+  color: #111;
+  font-family: "Suisse Intl", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.36px;
+  cursor: pointer;
+}
+.catalog-section__filter-content {
+  display: flex;
+  max-height: 0px;
+  opacity: 0;
+  visibility: hidden;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 24px;
+  justify-content: start;
+  gap: 12px;
+  transition: 0.43s;
+}
+.catalog-section__filter-label {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 8px;
+  color: #111;
+  font-family: "Suisse Intl", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.36px;
+  cursor: pointer;
+}
+.catalog-section__filter-label:hover {
+  color: #ff7707;
+}
+.catalog-section__filter-label input:checked + div {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-image: url("../assets/icons/check-icon.svg");
+}
+.catalog-section__filter-checkbox {
+  width: 16px;
+  height: 16px;
+  border-radius: 4px;
+  border: 1px solid #ff7707;
+}
+.catalog-section__filter-reset-btn {
+  margin-top: 48px;
+  width: 100%;
+  padding: 13px;
+  text-align: center;
+  border-radius: 8px;
+  background: #ebebeb;
+  color: #111;
+  font-family: "Suisse Intl", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.36px;
+  cursor: pointer;
+  transition: 0.43s;
+  outline: 1px solid transparent;
+}
+.catalog-section__filter-reset-btn:hover {
+  background-color: #fff;
+  outline: 1px solid #ebebeb;
+}
+.catalog-section__filter-reset-btn:active {
+  transform: scale(0.95);
+}
+.catalog-section__body {
+  width: 100%;
+}
+.catalog-section__list {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 8px;
+}
+.catalog-section__list-item {
+  width: 100%;
+}
+.catalog-section__list-item-wrapper {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 24px 32px;
+  border-radius: 24px;
+  border: 1px solid #ebebeb;
+  background: #fff;
+  transition: 0.43s;
+}
+.catalog-section__list-item-wrapper:hover {
+  border-color: #ff7707;
+}
+.catalog-section__list-item-img-wrapper {
+  margin: auto;
+  width: 100%;
+  height: 210px;
+}
+.catalog-section__list-item-img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: center;
+     object-position: center;
+}
+.catalog-section__list-item-heading {
+  color: #111;
+  display: -webkit-box;
+  font-family: "Suisse Intl", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.36px;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.catalog-section__pagination {
+  margin-top: 40px;
+  margin-left: 296px;
 }/*# sourceMappingURL=index.css.map */
