--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -1035,6 +1035,17 @@
       list-style-position: outside;
       margin-left: 15px;
     }
+    ul {
+      list-style-type: disc;
+      margin-left: 15px;
+      list-style-position: outside;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: start;
+      gap: 12px;
+      margin-bottom: 32px;
+    }
     img {
       width: 100%;
       margin-top: 72px;
@@ -1312,5 +1323,181 @@
   &__pagination {
     margin-top: 40px;
     margin-left: 296px;
+  }
+}
+
+.item-section {
+  &__wrapper {
+    align-items: flex-start;
+    gap: 40px;
+  }
+
+  &__content {
+    max-width: 733px;
+  }
+
+  &__content-img {
+    width: 100%;
+    height: 577px;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  &__text-content {
+    h2 {
+      margin-top: 64px;
+      margin-bottom: 24px;
+      color: rgba($color: $black, $alpha: 0.4);
+      font-family: $mainFont;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      letter-spacing: -0.28px;
+      text-transform: uppercase;
+    }
+    p {
+      margin-bottom: 16px;
+      span,
+      a {
+        color: $brandColor;
+      }
+      a {
+        transition: $defTransitionTime;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+    p,
+    li {
+      color: $black;
+      font-family: $mainFont;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 130%; /* 26px */
+      letter-spacing: -0.4px;
+    }
+    ul {
+      list-style-type: disc;
+      margin-left: 15px;
+      list-style-position: outside;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: start;
+      gap: 12px;
+      margin-bottom: 32px;
+    }
+    ol {
+      margin-bottom: 32px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: start;
+      gap: 12px;
+      list-style-type: decimal;
+      list-style-position: outside;
+      margin-left: 15px;
+    }
+    img {
+      width: 100%;
+      margin-top: 72px;
+      margin-bottom: 96px;
+      // height: 269px;
+      object-fit: cover;
+      object-position: center;
+    }
+  }
+
+  &__info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+  }
+
+  &__info-heading {
+    margin-bottom: 24px;
+    color: $black;
+    font-family: $mainFont;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%; /* 41.6px */
+    letter-spacing: -0.64px;
+  }
+
+  &__price {
+    margin-bottom: 40px;
+    color: $brandColor;
+    font-family: $mainFont;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.48px;
+  }
+
+  &__info-item {
+    margin-bottom: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    gap: 12px;
+  }
+
+  &__info-item-heading {
+    color: $black;
+    font-family: $mainFont;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.32px;
+  }
+
+  &__info-item-list {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    flex-wrap: wrap;
+  }
+
+  &__info-item-list-link {
+    padding: 8px 16px;
+    border-radius: 8px;
+    border: 1px solid #ebebeb;
+    color: #111;
+    font-family: Suisse Intl;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.36px;
+    transition: $defTransitionTime;
+    &:hover {
+      border-color: $brandColor;
+    }
+    &.active {
+      border-color: $brandColor;
+    }
+  }
+
+  &__info-color-link {
+    padding-left: 12px + 55px;
+    color: $black;
+    font-family: $mainFont;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.36px;
+    background-image: url('../assets/img/color.png');
+    background-repeat: no-repeat;
+    background-position: left center;
+    background-size: contain;
   }
 }
